- Fixed calender "se all arrangementer" link on mobile

--- a/sites/all/themes/rebild/css/global.css
+++ b/sites/all/themes/rebild/css/global.css
@@ -2613,9 +2613,9 @@ div.workbench-info-block a {
 /* line 107, ../sass/partials/_views.scss */
 .view-id-calendar_frontpage .calendar_view_all {
   position: absolute;
-  top: 0;
+  top: 20px;
   text-transform: uppercase;
-  right: 0;
+  left: 0;
   padding-top: 2px;
 }
 /* line 113, ../sass/partials/_views.scss */
