--- a/sites/all/themes/rebild/css/rebild-alpha-default.css
+++ b/sites/all/themes/rebild/css/rebild-alpha-default.css
@@ -376,12 +376,21 @@ Nodes
 .view-id-calendar_frontpage .post1, .view-id-calendar_frontpage .post2 {
   margin: 0 0 20px 0;
 }
+/* line 280, ../sass/rebild-alpha-default.scss */
+.view-id-calendar_frontpage .calendar_view_all {
+  position: absolute;
+  top: 0;
+  text-transform: uppercase;
+  right: 0;
+  left: auto;
+  padding-top: 2px;
+}
 
 /*------------------------------------------------------------------
 	Blocks
 -------------------------------------------------------------------*/
 /* Zone: Footer */
-/* line 289, ../sass/rebild-alpha-default.scss */
+/* line 297, ../sass/rebild-alpha-default.scss */
 #zone-footer .block {
   margin-bottom: 0;
 }
@@ -390,45 +399,45 @@ Nodes
 	Blocks - Specific
 -------------------------------------------------------------------*/
 /* Selfservice block - frontpage */
-/* line 300, ../sass/rebild-alpha-default.scss */
+/* line 308, ../sass/rebild-alpha-default.scss */
 #region-header-first .block {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
   padding: 25px 0 20px 0;
 }
-/* line 303, ../sass/rebild-alpha-default.scss */
+/* line 311, ../sass/rebild-alpha-default.scss */
 #region-header-first .block .jump-left, #region-header-first .block .jump-right {
   width: 33%;
   display: inline-block;
 }
-/* line 307, ../sass/rebild-alpha-default.scss */
+/* line 315, ../sass/rebild-alpha-default.scss */
 #region-header-first .block .jump-left {
   text-align: right;
 }
-/* line 310, ../sass/rebild-alpha-default.scss */
+/* line 318, ../sass/rebild-alpha-default.scss */
 #region-header-first .block .jump-right {
   text-align: left;
 }
-/* line 313, ../sass/rebild-alpha-default.scss */
+/* line 321, ../sass/rebild-alpha-default.scss */
 #region-header-first .block p.separator {
   display: inline-block;
 }
 
 /* Search block - frontpage */
-/* line 321, ../sass/rebild-alpha-default.scss */
+/* line 329, ../sass/rebild-alpha-default.scss */
 #region-header-second .block {
   font-size: 13px;
   margin-bottom: 40px;
 }
-/* line 324, ../sass/rebild-alpha-default.scss */
+/* line 332, ../sass/rebild-alpha-default.scss */
 #region-header-second .block form {
   max-width: 680px;
   margin: 0 auto 1.7em;
 }
 
 /* Search block - Inside mega menu */
-/* line 333, ../sass/rebild-alpha-default.scss */
+/* line 341, ../sass/rebild-alpha-default.scss */
 .ultimenu p.small-text {
   font-size: 0.91667em;
   line-height: 1.4em;
@@ -437,20 +446,20 @@ Nodes
   padding-top: 10px;
   margin-bottom: 0 !important;
 }
-/* line 340, ../sass/rebild-alpha-default.scss */
+/* line 348, ../sass/rebild-alpha-default.scss */
 .ultimenu p.small-text a {
   color: #6b6b6b;
   margin: 0 10px 0 0;
 }
-/* line 345, ../sass/rebild-alpha-default.scss */
+/* line 353, ../sass/rebild-alpha-default.scss */
 .ultimenu p {
   font-size: 0.91667em;
 }
-/* line 349, ../sass/rebild-alpha-default.scss */
+/* line 357, ../sass/rebild-alpha-default.scss */
 .ultimenu form .form-item, .ultimenu form .form-actions {
   margin: 0;
 }
-/* line 352, ../sass/rebild-alpha-default.scss */
+/* line 360, ../sass/rebild-alpha-default.scss */
 .ultimenu form .form-wrap {
   background: #e0e0e0;
   padding: 6px;
@@ -462,12 +471,12 @@ Nodes
   -o-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 359, ../sass/rebild-alpha-default.scss */
+/* line 367, ../sass/rebild-alpha-default.scss */
 .ultimenu form .form-wrap input[type=search],
 .ultimenu form .form-wrap input[type=text] {
   font-size: 0.91667em;
 }
-/* line 362, ../sass/rebild-alpha-default.scss */
+/* line 370, ../sass/rebild-alpha-default.scss */
 .ultimenu form .form-wrap input[type=submit] {
   position: absolute;
   top: 6px;
@@ -476,24 +485,24 @@ Nodes
 }
 
 /* Footer - Contact information */
-/* line 374, ../sass/rebild-alpha-default.scss */
+/* line 382, ../sass/rebild-alpha-default.scss */
 #region-footer-first .block {
   text-align: left;
 }
-/* line 377, ../sass/rebild-alpha-default.scss */
+/* line 385, ../sass/rebild-alpha-default.scss */
 #region-footer-first .block .content table {
   margin: 0 0 10px;
   text-align: left;
 }
 
 /* Cookie Popup*/
-/* line 388, ../sass/rebild-alpha-default.scss */
+/* line 396, ../sass/rebild-alpha-default.scss */
 #sliding-popup .popup-content #popup-text {
   width: 670px;
   max-width: 50%;
   text-align: left;
 }
-/* line 393, ../sass/rebild-alpha-default.scss */
+/* line 401, ../sass/rebild-alpha-default.scss */
 #sliding-popup .popup-content #popup-buttons {
   max-width: 50%;
   float: right;
@@ -502,13 +511,13 @@ Nodes
 /*------------------------------------------------------------------
 	Nodes
 -------------------------------------------------------------------*/
-/* line 405, ../sass/rebild-alpha-default.scss */
+/* line 413, ../sass/rebild-alpha-default.scss */
 .node #content-main.has-sidebar {
   border-right: 1px dotted #474747;
   width: 71%;
   padding-right: 3%;
 }
-/* line 410, ../sass/rebild-alpha-default.scss */
+/* line 418, ../sass/rebild-alpha-default.scss */
 .node #region-content-sidebar {
   float: right;
   width: 23%;
@@ -516,12 +525,12 @@ Nodes
 }
 
 /* Page & News Articles */
-/* line 419, ../sass/rebild-alpha-default.scss */
+/* line 427, ../sass/rebild-alpha-default.scss */
 .node-page,
 .node-news-article {
   /* Node Image Gallery */
 }
-/* line 423, ../sass/rebild-alpha-default.scss */
+/* line 431, ../sass/rebild-alpha-default.scss */
 .node-page .field-name-field-main-image-gallery .field-items .field-item,
 .node-news-article .field-name-field-main-image-gallery .field-items .field-item {
   width: 21%;
