--- a/sites/all/themes/rebild/sass/partials/_views.scss
+++ b/sites/all/themes/rebild/sass/partials/_views.scss
@@ -106,9 +106,9 @@
 	}
 	.calendar_view_all {
 			position: absolute;
-			top: 0;
+			top: 20px;
 			text-transform: uppercase;
-			right: 0;
+			left: 0;
 			padding-top: 2px;
 			a {
 				text-shadow: white 1px 1px 1px;
